// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DwollaCustomerUpdate 1`] = `
<DocumentFragment>
  <dwolla-customer-update
    customerid="123"
  />
</DocumentFragment>
`;

exports[`with optional props 1`] = `
<DocumentFragment>
  <dwolla-customer-update
    correlationid="123abc"
    customerid="123"
    email="janedoe@email.com"
    firstname="Jane"
    ipaddress="255.255.255.255"
    lastname="Doe"
    privacy="www.yourprivacy.com"
    terms="www.yourterms.com"
  />
</DocumentFragment>
`;
